vlib/v/checker/tests/void_method_call.out
vlib/v/checker/tests/void_method_call.vv:5:17: error: cannot call a method using an invalid expression
    3 |
    4 | fn main() {
    5 |     simple_fn().method()
      |                 ~~~~~~~~
    6 | }
