vlib/v/checker/tests/void_method_call.vv
fn simple_fn() {
}

fn main() {
    simple_fn().method()
}
